--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,10 +2,18 @@
 <ul>
   <% @tasks.each do |task| %>
     <li>
+      <% if task.completed %>
+        <i class="fas fa-check-square"></i>
+      <% else %>
+        <i class="far fa-square"></i>
+      <% end %>
       <%= link_to task.title, task_path(task) %>
-      <%= link_to 'Delete', delete_task_path(task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+      <%= link_to '', task_path(task), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "fas fa-trash" %>
     </li>
   <% end %>
 </ul>
 
-<%= link_to 'Add a new task', new_task_path %>
+<%= link_to new_task_path do %>
+  <i class="fas fa-plus"></i> Add a new task
+<% end %>
+
